Initial about page. Added spinner UI component. Small styling changes, converting font size px to em.

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-image-scroller": "^0.3.0",
     "react-switch": "^5.0.0",
     "react-typography": "^0.16.19",
+    "social-media-icons-react": "^1.0.10",
     "styled-components": "^4.2.0",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.54",
