--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@mdx-js/mdx": "^1.5.1",
     "@mdx-js/react": "^1.5.1",
     "axios": "^0.19.2",
     "babel-plugin-styled-components": "^1.10.0",
+    "framer-motion": "^2.3.0",
     "gatsby": "^2.23.11",
     "gatsby-image": "^2.0.39",
     "gatsby-plugin-feed-mdx": "^1.0.0",
